# app/Http/Requests/BusinessRequest.php
@@ -45,6 +45,11 @@ class BusinessRequest extends FormRequest
 
             'business_additional_info' => 'nullable',
             'category_id' => ($isStoreRoute ? 'required|' : '') . 'exists:categories,id',
+
+            'business_hours' => 'nullable|array',
+            'business_hours.*.day' => 'required|integer|min:0|max:6',
+            'business_hours.*.open' => 'required',
+            'business_hours.*.close' => 'required',
         ];
     }
 
