# app/Http/Resources/BranchResource.php
@@ -25,7 +25,8 @@ class BranchResource extends JsonResource
             'branch_email' => $this->branch_email,
             'branch_phone' => $this->branch_phone,
             'branch_about_us' => $this->branch_about_us,
-            'branch_services' => ServiceResource::collection($this->BranchServices), 
+            'branch_services' => ServiceResource::collection($this->BranchServices),
+            'branch_opening_hours' => ['periods' => BranchHourResource::collection($this->branchHours)], 
             'branch_additional_info' => $this->branch_about_us,
             'branch_address' => $this->branch_address,
             'branch_zipcode' => $this->branch_zipcode,
